секции с вопросом, секции с вариантом ответа
